Add module-info to core-common
Signed-off-by: Jan Supol <jan.supol@oracle.com>